Fixing partial feature commit (part 1)
Previous code commit for chart move also accidentally overlapped with
another pair of features I'm working on.
1. Change of background color of checkbox and dropdown to show which
values came fro a cookie.
2. Start of work on a server based config file instead of remembering
settings in a cookie (so use can view his preferences from any browser)

Also picking up some misc code cleanup.

--- a/resources/thermo.css
+++ b/resources/thermo.css
@@ -13,3 +13,8 @@ table.thermo_chart, th.thermo_chart, td.thermo_chart
 {
 	border: 1px solid black;
 }
+
+.remembered_input
+{
+	background: #BBFFBB;
+}
